# scaler-hackathon-project

./: .env  .gitignore  Dockerfile  README.md  baseline_agent.py  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  test_api.py  validate-submission.sh
sql_opt_env/: Dockerfile  README.md  __init__.py  client.py  db.py  inference.py  models.py  openenv.yaml  pyproject.toml  query_bank.py
sql_opt_env/server/: __init__.py  app.py  sql_opt_env_environment.py
