[project]
name = "openenv-hackathon-opencode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "openenv-core>=0.2.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "sqlglot>=30.2.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
